Add auto-fill ex

--- a/index.html
+++ b/index.html
@@ -11,25 +11,13 @@
   <body>
     <div class="outerBlock gridContainer">
       <div class="innerBlock area">Item 1</div>
-      <div class="innerBlock area">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ipsa
-        necessitatibus sed dolorum, quasi vitae eum doloribus nam, labore
-        eveniet sunt rem facere eaque. Illo unde eos repellat corporis nobis
-        neque saepe obcaecati? Dolore sint earum dicta commodi at mollitia
-        deleniti, rerum modi consectetur corporis! Voluptates dolor magnam rem
-        error alias quo dolore at itaque doloribus vel ipsa expedita accusantium
-        ea accusamus veritatis repellat, qui quisquam possimus vitae in officiis
-        ab pariatur! Voluptas corporis voluptatibus quod minus reprehenderit
-        harum saepe adipisci? Quisquam a qui placeat magnam, dolor, eius
-        possimus illum nobis repudiandae rem iusto dolorem nostrum doloremque
-        ipsum quia quod!
-      </div>
+      <div class="innerBlock area">Item 2</div>
       <div class="innerBlock area">Item 3</div>
-      <!-- <div class="innerBlock area">Item 4</div> -->
-      <!-- <div class="innerBlock area">Item 5</div>
+      <div class="innerBlock area">Item 4</div>
+      <div class="innerBlock area">Item 5</div>
       <div class="innerBlock area">Item 6</div>
       <div class="innerBlock area">Item 7</div>
-      <div class="innerBlock area">Item 8</div> -->
+      <div class="innerBlock area">Item 8</div>
     </div>
   </body>
 </html>
